<resources>
    <string name="app_name">WalkinClinicV01</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_confirmation">Confirm Password</string>
    <string name="prompt_first">First Name</string>
    <string name="prompt_last">Last Name</string>
    <string name="titleRegistrationWindow">Create an Account</string>
    <string name="prompt_type">User role  (Patient, Employee, or Administrator)</string>
    <string name="patient">Patient</string>
    <string name="employee">Employee</string>
    <string name="prompt_role">I am a</string>
</resources>
